# aws-cpp-sdk-debian-package

./: .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.test.build  LICENSE  README.md
.github/workflows/: build.yml
debian/: aws-cpp-sdk-core-dev.install  aws-cpp-sdk-core0.install  aws-cpp-sdk-s3-crt-dev.install  aws-cpp-sdk-s3-crt0.install  aws-cpp-sdk-s3-dev.install  aws-cpp-sdk-s30.install  aws-cpp-sdk-transfer-dev.install  aws-cpp-sdk-transfer0.install  changelog  control  copyright  rules
package_test/: CMakeLists.txt
package_test/debian/: changelog  control  copyright  rules
package_test/src/: main.cc
